--- a/EulerProblems/EulerProblems/EulerProblems.csproj
+++ b/EulerProblems/EulerProblems/EulerProblems.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Files\Euler13.txt" />
+    <Content Include="Files\Euler8.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
